--- a/webresources/templates/groups.html
+++ b/webresources/templates/groups.html
@@ -19,7 +19,7 @@
 
 	<tr>
 		<td>
-		<a href="#"> {{ x['name'] }} </a>
+		<a href="/commands" target="parent"> {{ x['name'] }} </a>
 		</td>
 
 	</tr>
