--- a/webresources/templates/index.html
+++ b/webresources/templates/index.html
@@ -18,9 +18,9 @@
 
 	<tr height="100%">
 
-	<td  height="100%" width="30%">	<iframe width="100%" height="100%" src="/groups"> </iframe></td>
+	<td  height="100%" width="20%">	<iframe width="100%" height="100%" src="/groups"> </iframe></td>
 
-	<td  height="100%" width="70%">	<iframe width="100%" height="100%" src="/commands"> </iframe></td>
+	<td  height="100%" width="80%">	<iframe width="100%" height="100%" src="/commands" name="commands"> </iframe></td>
 
 	</tr>
 
