Fixed commands, working on layout more

--- a/webresources/templates/groups.html
+++ b/webresources/templates/groups.html
@@ -17,8 +17,8 @@
 
 	{% for x in command_array %}
 
-	<tr>
-		<td>
+	<tr height="20%">
+		<td  height="20%">
 		<a href="/commands" target="parent"> {{ x['name'] }} </a>
 		</td>
 
