--- a/webresources/templates/index.html
+++ b/webresources/templates/index.html
@@ -18,9 +18,25 @@
 
 	<tr height="100%">
 
+<!--
 	<td  height="100%" width="20%">	<iframe width="100%" height="100%" src="/groups"> </iframe></td>
+-->
+	<td>
+	<table border="1" width="100%" height="100%">
+	{% for x in command_array %}
 
-	<td  height="100%" width="80%">	<iframe width="100%" height="100%" src="/commands" name="commands"> </iframe></td>
+	<tr height="20%">	<!-- Groups -->
+		<td  height="20%">
+		<a href="/command/{{ x['filename'] }}" target="commands-frame"> {{ x['name'] }} </a>
+		</td>
+
+	</tr>
+	{% endfor %}
+
+
+	</table></td>
+
+	<td  height="100%" width="80%">	<iframe width="100%" height="100%" src="/command/{{ command_array[0]['filename'] }}" name="commands-frame"> </iframe></td>
 
 	</tr>
 
