--- a/webresources/templates/command_list.html
+++ b/webresources/templates/command_list.html
@@ -5,11 +5,19 @@
 		<script type="text/javascript" src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
 
 		<link title="no title" media="all" charset="utf-8" href="{{ url_for('static', filename='bootstrap.min.css') }}" rel="stylesheet" type="text/css">
+
+		<style>
+
+		.border--green { border-color: #2ECC40; }
+
+		.border--red { border-color: #FF4136; }
+
+		</style>
 	</head>
 
 
 
-	<body>
+	<body bgcolor="#2ECC40">
 <!--
 		
 	<table border="1" width="100%" height="100%">
