--- a/webresources/templates/index.html
+++ b/webresources/templates/index.html
@@ -10,13 +10,24 @@
 	</head>
 
 
-	<body>
+	<body bgcolor="">
 		
-	<table border="1" width="100%" height="100%">
+	<table border="0" width="100%" height="100%">
 
-	<tr height="10%"> </tr>
+	<tr height="10%">
+	<td>
+		<h3 align="center">Remoter-py</h3>
+		<h5  align="center">version 
+		{{ meta['version'] }}</h5>
+	</td>
+	<td align="center">
+	<h5> Scan for <u><b>'{{ meta['kernel'] }}' </b></u></h5>
+	<h4>	Executed as: <b>{{ meta['username'] }}</b> at <b>'{{ meta['date'] }}</b>' with command line : </h4>
+	<h5>	{{ meta['cli'] }} </h5>
+	</td>
+	</tr>
 
-	<tr height="100%">
+	<tr height="90%">
 
 <!--
 	<td  height="100%" width="20%">	<iframe width="100%" height="100%" src="/groups"> </iframe></td>
