--- a/webresources/templates/command_list.html
+++ b/webresources/templates/command_list.html
@@ -2,40 +2,12 @@
 	<head>
 		<title> Command List </title>
 
-		<script type="text/javascript" src="{{ url_for('static', filename='bootstrap.min.js') }}"></script>
-
-		<link title="no title" media="all" charset="utf-8" href="{{ url_for('static', filename='bootstrap.min.css') }}" rel="stylesheet" type="text/css">
-
-		<style>
-
-		.border--green { border-color: #2ECC40; }
-
-		.border--red { border-color: #FF4136; }
-
-		</style>
 	</head>
 
-
-
-	<body bgcolor="#2ECC40">
-<!--
-		
-	<table border="1" width="100%" height="100%">
-
--->
+	<body>
 	{% for i in command_array %}
-<!--
-	<tr  width="100%" height="100%" > <td  width="100%" height="100%">
--->
-	<div>	<iframe width="100%" height="100%" src="/command/{{ i['filename'] }}"></iframe> </div>
-
-<!--
-	</td></tr>
--->
+		<div>	<iframe width="100%" height="100%" src="/command/{{ i['filename'] }}"></iframe> </div>
 	{% endfor %}
-<!--
-	</table>
--->
 	</body>
 
 
