--- a/webresources/templates/commands.html
+++ b/webresources/templates/commands.html
@@ -19,25 +19,19 @@
 		<table border="1" width="100%">
 		<tr>
 			<td>
-				<pre style="white-space: pre-wrap; word-wrap: break-word;">{% if meta['uid']!=0 %}${% else %}#{% endif %} {{ comm['command'] }}</pre>
-
+				<pre style="white-space: pre-wrap; word-wrap: break-word;">{% if meta['uid'] != '0' %}${% else %}#{% endif %} {{ comm['command'] }}</pre>
 			</td>
-
 		</tr>
 
 		<tr>
 			<td><pre style="white-space: pre-wrap; word-wrap: break-word;">{{ comm['response'] }}</pre>
 			</td>
-
 		</tr>
-
 		</table>
 
 		<br><br>
 
 		{% endfor %}
 
-
 	</body>
-
 </html>
